# tap-zendesk

./: README.md  environment.yml  meltano.yml  pyproject.toml
tap_zendesk/: client.py  tap.py
tap_zendesk/streams/: __init__.py  conversation_log.py  custom_object_records.py  custom_objects.py  ticket_metric_events.py  tickets.py
