[tool.poetry]
name = "tap-zendesk"
version = "0.1.0"
description = "`tap-zendesk` is a Singer tap for Zendesk, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Mark Estey"]
keywords = [
    "ELT",
    "Zendesk",
]
license = "Apache-2.0"
packages = [
    { include = "tap_zendesk" },
]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
singer-sdk = "~=0.49"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-zendesk = 'tap_zendesk.tap:TapZendesk.cli'
